--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1>Will be back on 1st August 2023</h1>
+<p>>I am a software, marketing and misc resource and service provider (VAs etc)</p>
+<p>I do investments in tech as well</p>
+<p>I help people optimize the above, explore other verticals via podcasts, talks etc</p>
+<h1>More details will be published on 1st August 2023</h1>
